<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2015 The CyanogenMod Project
     Copyright (C) 2017-2020, 2022 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Setup Wizard</string>
    <string name="os_name" translatable="false">LineageOS</string>

    <string name="lineage_wizard_script_uri" translatable="false">android.resource://org.lineageos.setupwizard/raw/lineage_wizard_script</string>
    <string name="lineage_wizard_script_user_uri" translatable="false">android.resource://org.lineageos.setupwizard/raw/lineage_wizard_script_user</string>
    <string name="lineage_wizard_script_managed_profile_uri" translatable="false">android.resource://org.lineageos.setupwizard/raw/lineage_wizard_script_managed_profile</string>

    <string name="activity_label_empty" />

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="loading">Just a sec\u2026</string>

    <string name="setup_complete">Setup is complete</string>
    <string name="setup_welcome">Welcome</string>
    <string name="setup_welcome_message">Welcome to <xliff:g id="name" example="LineageOS">%1$s</xliff:g></string>
    <string name="setup_locale">Language</string>
    <string name="setup_wifi">Select Wi-Fi</string>
    <string name="setup_sim_missing">SIM card missing</string>
    <string name="setup_choose_data_sim">Choose a SIM for data</string>
    <string name="setup_location">Location services</string>
    <string name="setup_other">Other services</string>
    <string name="setup_datetime">Date &amp; time</string>
    <string name="setup_current_date">Current date</string>
    <string name="setup_current_time">Current time</string>

    <string name="sim_missing_summary" product="tablet">A SIM card has not been detected in your tablet. To insert a SIM card, read the instructions that came with your device.</string>
    <string name="sim_missing_summary" product="default">A SIM card has not been detected in your phone. To insert a SIM card, read the instructions that came with your device.</string>
    <string name="choose_data_sim_summary" product="tablet">Which SIM do you want to use for data? The selected SIM may incur network charges as it will be used to set up your tablet.</string>
    <string name="choose_data_sim_summary" product="default">Which SIM do you want to use for data? The selected SIM may incur network charges as it will be used to set up your phone.</string>

    <string name="date_time_summary">Set your time zone and adjust current date and time if needed</string>

    <string name="location_access_summary"><b>Allow apps that have asked your permission</b> to use your location information. This may include your current location and past locations.</string>

    <string name="setup_mobile_data">Turn on cellular data</string>
    <string name="setup_mobile_data_no_service">No service</string>
    <string name="setup_mobile_data_emergency_only">Emergency calls only</string>
    <string name="enable_mobile_data_summary">Do you want to use cellular data during setup? Turning on cellular data may be subject to data charges.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>

    <string name="emergency_call">Emergency call</string>
    <string name="accessibility_settings">Accessibility settings</string>

    <string name="setup_services">LineageOS features</string>
    <string name="services_pp_explanation">These services work for you to extend the capabilities of your device. Data will be used in accordance with <xliff:g id="name" example="LineageOS">%1$s</xliff:g>\'s privacy policy.</string>
    <string name="services_find_privacy_policy">You can read the privacy policy on another device by visiting <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
    <string name="services_privacy_policy_uri" translatable="false">https://lineageos.org/legal</string>
    <string name="services_help_improve_cm">Help improve <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
    <string name="services_metrics_label"><xliff:g id="name" example="Help improve LineageOS">%1$s</xliff:g> by automatically sending diagnostic and usage data to <xliff:g id="name" example="LineageOS">%2$s</xliff:g>. This information can’t be used to identify you and lends a hand to teams working on things like battery life, app performance, and new <xliff:g id="name" example="LineageOS">%3$s</xliff:g> features.</string>
    <string name="services_os_nav_keys_label"><b>Use on screen navigation keys</b> instead of hardware keys.</string>
    <string name="services_full_description"><xliff:g id="pp_explanation">%1$s</xliff:g>\n<xliff:g id="pp_find">%2$s</xliff:g></string>

    <!-- Biometric setup -->
    <string name="settings_biometric_setup_title">Select backup screen lock type</string>
    <string name="settings_biometric_setup_details">How would you like to lock your screen?</string>
    <string name="fingerprint_setup_title">Fingerprint setup</string>
    <string name="fingerprint_setup_summary">To use your fingerprint sensor to unlock your screen, you\'ll need to:</string>
    <string name="fingerprint_setup_add_fingerprint">Add your fingerprint</string>
    <string name="face_setup_title">Face setup</string>
    <string name="face_setup_summary">To use your face to unlock your screen, you\'ll need to:</string>
    <string name="face_setup_add_face">Add your face</string>
    <string name="biometric_setup_backup_lock_method">Setup a secondary unlock method</string>
    <string name="biometric_setup_screen_lock_setup">Setup screen lock</string>
    <string name="sim_locale_changed">%1$s SIM detected</string>

    <!-- Secure lock screen -->
    <string name="settings_lockscreen_setup_title">Select screen lock type</string>
    <string name="settings_lockscreen_setup_details">How would you like to lock your screen?</string>
    <string name="lockscreen_setup_title" product="default">Protect your phone</string>
    <string name="lockscreen_setup_title" product="device">Protect your device</string>
    <string name="lockscreen_setup_title" product="tablet">Protect your tablet</string>
    <string name="lockscreen_setup_summary"><b>Protect this device</b> and require a PIN, pattern, or password to unlock the screen</string>
    <string name="lockscreen_setup_screen_lock_setup">Set up</string>

    <!-- Backup Restore -->
    <string name="intro_restore_title">Restore apps and data</string>
    <string name="intro_restore_subtitle">If you have a backup from your last <xliff:g id="name" example="LineageOS">%s</xliff:g> device, you can restore it here.</string>
    <string name="intro_restore_button">Restore from backup</string>

    <!-- Update Recovery -->
    <string name="update_recovery_title">Update Lineage Recovery</string>
    <string name="update_recovery_description">Updates Lineage Recovery on first boot subsequent to every update.</string>
    <string name="update_recovery_warning">Recovery will be updated as soon as you finish the setup. If you wish to keep it intact, disable this feature.</string>
    <string name="update_recovery_setting">Update Lineage Recovery alongside the OS</string>
    <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>

    <!-- Navigation settings -->
    <string name="setup_navigation">Navigation</string>
    <string name="navigation_summary">Choose preferred navigation method</string>
    <string name="gesture_navigation">Gesture navigation</string>
    <string name="two_button_navigation">2-button navigation</string>
    <string name="navbar_navigation">3-button navigation</string>
    <string name="hide_gesture_hint">Hide gestural navigation hint</string>

    <!-- Assisted GPS -->
    <string name="location_agps_access_summary">When location is on, <b>download satellite assistance data from the internet</b>, which can greatly improve the GPS startup performance.</string>

    <!-- Theme -->
    <string name="setup_theme">Save battery with Dark theme</string>
    <string name="theme_summary">Keep your battery alive longer with a dark background</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
</resources>
