<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2022 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<com.google.android.setupdesign.GlifLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setup_wizard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/SudContentFrame"
        android:layout_marginTop="@dimen/base_margin_top">

        <FrameLayout
            android:id="@+id/page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/navigation_illustration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:lottie_rawRes="@raw/lottie_system_nav_fully_gestural"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true" />

                    <RadioGroup
                        android:id="@+id/navigation_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radio_gesture"
                            android:text="@string/gesture_navigation"
                            android:checked="true"
                            style="@style/SudRadioButton" />

                        <RadioButton
                            android:id="@+id/radio_two_button"
                            android:text="@string/two_button_navigation"
                            style="@style/SudRadioButton" />

                        <RadioButton
                            android:id="@+id/radio_sw_keys"
                            android:text="@string/navbar_navigation"
                            style="@style/SudRadioButton" />

                    </RadioGroup>

                    <CheckBox
                        android:id="@+id/hide_navigation_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hide_gesture_hint"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="6dp"
                        android:layout_marginLeft="-6dp"
                        android:paddingLeft="18dp"
                        style="@style/SudCheckBox" />
                </LinearLayout>
            </ScrollView>
        </FrameLayout>

        <org.lineageos.setupwizard.NavigationLayout
            android:id="@+id/navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</com.google.android.setupdesign.GlifLayout>

