<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The CyanogenMod Project
     Copyright (C) 2017-2021 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<com.google.android.setupdesign.GlifLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setup_wizard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/SudContentFrame">

        <ProgressBar
            android:id="@+id/progress"
            style="@style/SudFourColorIndeterminateProgressBar"
            android:indeterminateOnly="true"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:id="@+id/page_view"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/mobile_data_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_mobile_data_summary"
                        style="@style/SudDescription.Glif" />

                    <include layout="@layout/divider" />

                    <LinearLayout
                        android:id="@+id/data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/content_margin_left"
                        android:paddingRight="@dimen/data_switch_margin_right"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true">

                        <ImageView
                            android:id="@+id/signal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_signal_0" />

                        <TextView
                            android:id="@+id/enable_data_title"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="14sp"
                            android:layout_marginLeft="@dimen/carrier_text_margin_left"
                            android:text="@string/setup_mobile_data_no_service"
                            android:maxLines="4" />

                        <Switch
                            android:id="@+id/data_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:duplicateParentState="true"
                            android:clickable="false"
                            android:textOff="@string/no"
                            android:textOn="@string/yes"
                            style="@style/SudSwitchStyle" />
                    </LinearLayout>

                    <include layout="@layout/divider" />

                </LinearLayout>
            </ScrollView>
        </FrameLayout>

        <org.lineageos.setupwizard.NavigationLayout
            android:id="@+id/navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</com.google.android.setupdesign.GlifLayout>
