<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
     Copyright (C) 2017 The LineageOS Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <include layout="@layout/header_condensed" />

    <FrameLayout android:id="@+id/page"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1">

        <ScrollView android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/PageContent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginBottom="@dimen/summary_margin_bottom"
                    android:paddingLeft="@dimen/content_margin_left"
                    android:paddingRight="@dimen/content_margin_right"
                    style="@style/PageSummaryText"
                    android:text="@string/update_recovery_description" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginBottom="@dimen/summary_margin_bottom"
                    android:paddingLeft="@dimen/content_margin_left"
                    android:paddingRight="@dimen/content_margin_right"
                    style="@style/PageSummaryText"
                    android:text="@string/update_recovery_warning" />

                <LinearLayout
                    android:id="@+id/update_recovery_checkbox_view"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/location_margin_left"
                    android:paddingRight="@dimen/content_margin_right"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <CheckBox
                        android:id="@+id/update_recovery_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:duplicateParentState="true"
                        android:clickable="false" />

                    <TextView
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:lineSpacingExtra="@dimen/setup_line_spacing"
                        android:gravity="top"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/location_text_margin_left"
                        android:layout_marginRight="@dimen/location_text_margin_right"
                        android:text="@string/update_recovery_setting"
                        android:maxLines="5" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <com.google.android.setupdesign.view.NavigationBar
        android:id="@+id/navigation_bar"
        style="@style/SudNavBarTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sud_navbar_height" />
</LinearLayout>
