<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2016 The CyanogenMod Project
     SPDX-FileCopyrightText: 2017-2024 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<com.google.android.setupdesign.GlifLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setup_wizard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <ImageView
                android:id="@+id/brand_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                style="@style/SudContentFrame"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:paddingStart="@dimen/welcome_content_container_padding_start"
                android:paddingEnd="@dimen/welcome_content_container_padding_end"
                android:paddingBottom="@dimen/welcome_content_container_padding_bottom">

                <TextView
                    style="@style/WelcomeTitle"
                    android:id="@+id/welcome_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hyphenationFrequency="none"
                    android:paddingBottom="@dimen/welcome_content_container_padding_bottom" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:focusableInTouchMode="true"
                    android:importantForAccessibility="no"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/launch_accessibility"
                        style="@style/SudGlifButton.Secondary"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_vertical"
                        android:drawableStart="@drawable/ic_eye"
                        android:gravity="start|center"
                        android:drawablePadding="@dimen/welcome_content_container_padding_end"
                        android:textSize="@dimen/welcome_accessibility_text_size"
                        android:textColor="?android:textColorPrimary"
                        android:text="@string/accessibility_settings" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/SudGlifButtonBar.Stackable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/emerg_dialer"
                style="@style/SudGlifButton.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency_call" />

            <Space
                android:layout_width="0.0dip"
                android:layout_height="0.0dip"
                android:layout_weight="1.0" />

            <Button
                android:id="@id/start"
                style="@style/SudGlifButton.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.setupdesign.GlifLayout>
